JSON schema gen improvements